force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/ucinn_ascendv2__Trigger_Handler__c.object-meta.xml
<CustomObject>
    <description>Stores which classes to run in response to DML performed on an object.</description>
    <label>ascend Trigger Handler</label>
    <nameField>
        <label>ascend Trigger Handler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ascend Trigger Handlers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>