force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/fields/ucinn_ascendv2__Class__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Class__c</fullName>
    <description>Name of the class to be run</description>
    <inlineHelpText>Name of the class to be run</inlineHelpText>
    <label>Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>