force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/fields/ucinn_ascendv2__Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>