force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/fields/ucinn_ascendv2__Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Filter_Field__c</fullName>
    <description>Name of the field used for filtering.</description>
    <inlineHelpText>Name of the field used for filtering.</inlineHelpText>
    <label>Filter Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>