force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/fields/ucinn_ascendv2__Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Filter_Value__c</fullName>
    <description>Value of the field used for filtering.</description>
    <inlineHelpText>Value of the field used for filtering.</inlineHelpText>
    <label>Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>