force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/fields/ucinn_ascendv2__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that this module is active</description>
    <inlineHelpText>Indicates that this module is active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>