force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/fields/ucinn_ascendv2__Is_Asynchronous__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Asynchronous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this module should be run asynchronously in this transaction</description>
    <inlineHelpText>Indicates that this module should be run asynchronously in this transaction</inlineHelpText>
    <label>Is Asynchronous</label>
    <type>Checkbox</type>
</CustomField>