force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/fields/ucinn_ascendv2__Is_User_Managed__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_User_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The record is managed by the user and updates won&apos;t be pushed to it.</description>
    <inlineHelpText>Check it if you intent to manage the record yourself. Be aware that updates to the package won&apos;t update the record.</inlineHelpText>
    <label>Is User Managed</label>
    <type>Checkbox</type>
</CustomField>