force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/fields/ucinn_ascendv2__Load_Order__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Load_Order__c</fullName>
    <description>Order in which this module should be run, helps maintain dependencies in the modules and data.</description>
    <inlineHelpText>Order in which this module should be run, helps maintain dependencies in the modules and data.</inlineHelpText>
    <label>Load Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>