force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/fields/ucinn_ascendv2__Object__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Object__c</fullName>
    <description>Name of the object this handler should be run for</description>
    <inlineHelpText>Name of the object this handler should be run for</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>