force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/fields/ucinn_ascendv2__Owned_by_Namespace__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Owned_by_Namespace__c</fullName>
    <description>Enter the namespace of the package or Org that will control this Trigger handler.</description>
    <label>Owned by Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>