force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/fields/ucinn_ascendv2__Trigger_Action__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Trigger_Action__c</fullName>
    <description>Trigger Action in which this module should fire</description>
    <inlineHelpText>Trigger Action in which this module should fire</inlineHelpText>
    <label>Trigger Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BeforeInsert</fullName>
            </value>
            <value>
                <fullName>BeforeUpdate</fullName>
            </value>
            <value>
                <fullName>BeforeDelete</fullName>
            </value>
            <value>
                <fullName>AfterInsert</fullName>
            </value>
            <value>
                <fullName>AfterUpdate</fullName>
            </value>
            <value>
                <fullName>AfterDelete</fullName>
            </value>
            <value>
                <fullName>AfterUndelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>