force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/fields/ucinn_ascendv2__Usernames_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Usernames_to_Exclude__c</fullName>
    <description>Semicolon separated list of Salesforce usernames that this trigger will NOT run for.</description>
    <inlineHelpText>Semicolon separated list of Salesforce usernames that this trigger will NOT run for. Leave blank to run for all users.</inlineHelpText>
    <label>Usernames to Exclude</label>
    <type>TextArea</type>
</CustomField>