force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/listViews/ascend_OOB_triggers.listView-meta.xml
<ListView>
    <fullName>ascend_OOB_triggers</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Is_Active__c</columns>
    <columns>ucinn_ascendv2__Class__c</columns>
    <columns>ucinn_ascendv2__Object__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Class__c</field>
        <operation>startsWith</operation>
        <value>ascend</value>
    </filters>
    <label>ascend OOB triggers</label>
</ListView>