force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Is_Active__c</columns>
    <columns>ucinn_ascendv2__Class__c</columns>
    <columns>ucinn_ascendv2__Load_Order__c</columns>
    <columns>ucinn_ascendv2__Object__c</columns>
    <columns>ucinn_ascendv2__Usernames_to_Exclude__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>