force-app/main/default/objects/ucinn_ascendv2__Trigger_Handler__c/listViews/ucinn_ascendv2__All_Main_Fields.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All_Main_Fields</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Class__c</columns>
    <columns>ucinn_ascendv2__Object__c</columns>
    <columns>ucinn_ascendv2__Usernames_to_Exclude__c</columns>
    <columns>ucinn_ascendv2__Is_Active__c</columns>
    <columns>ucinn_ascendv2__Load_Order__c</columns>
    <columns>ucinn_ascendv2__Is_User_Managed__c</columns>
    <columns>ucinn_ascendv2__Owned_by_Namespace__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All - Main Fields</label>
</ListView>